Updated the Link

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,19 +3,19 @@
   <ul class="list">
     <li class="item item-icon-right">
       <a href="#/app/person">List Of Popular Person With Avtars
-      <i class="icon ion-chevron-right icon-accessory"></i></a>
+      </a><i class="icon ion-chevron-right icon-accessory"></i>
     </li>
     <li class="item item-icon-right">
       <a href="#/app/technology">List Of New Technologies with Thumbnail
-      <i class="icon ion-chevron-right icon-accessory"></i></a>
+      </a><i class="icon ion-chevron-right icon-accessory"></i>
     </li>
     <li class="item item-icon-right">
       <a href="#/app/appsList">List Of New Apps with inset List
-      <i class="icon ion-chevron-right icon-accessory"></i></a>
+      </a><i class="icon ion-chevron-right icon-accessory"></i>
     </li>
     <li class="item item-icon-right">
       <a href="#/app/chart">High Chart
-      <i class="icon ion-chevron-right icon-accessory"></i></a>
+      </a><i class="icon ion-chevron-right icon-accessory"></i>
     </li>
   </ul>
     
