--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -2,7 +2,7 @@
   <ion-content>
     <ul class="list">
       <li class="item item-icon-right" ng-repeat="playlist in playlists">
-        <a  href="#/app/playlists/{{playlist.id}}">{{playlist.title}}<i class="icon  ion-chevron-right icon-accessory"></i></a>
+        <a  href="#/app/playlists/{{playlist.id}}">{{playlist.title}}</a><i class="icon  ion-chevron-right icon-accessory"></i>
       </li>
     </ul>
   </ion-content>
