--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -34,6 +34,12 @@
         <ion-item menu-close href="#/app/playlists">
           List of Users
         </ion-item>
+        <!--<ion-item menu-close href="#/app/tabs">
+          Tab Content
+        </ion-item>-->
+        <ion-item menu-close href="#/app/contact">
+          Contact
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
