Search Functionality Implimentented

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -14,7 +14,11 @@
       </a><i class="icon ion-chevron-right icon-accessory"></i>
     </li>
     <li class="item item-icon-right">
-      <a href="#/app/chart">High Chart
+      <a href="#/app/chart">Bar Chart
+      </a><i class="icon ion-chevron-right icon-accessory"></i>
+    </li>
+     <li class="item item-icon-right">
+      <a href="#/app/piechart">Pie Chart
       </a><i class="icon ion-chevron-right icon-accessory"></i>
     </li>
   </ul>
