--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Login" name="login-view">
   <ion-content class="padding">
-      <div class="text-center">
-        <img src="img/logo.jpg" class="logo" />
+      <div class="text-center padding">
+        <img src="img/logo.gif" class="logo" />
       </div>
       <div class="list list-inset">
           <label class="item item-input">
