--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -3,8 +3,16 @@
     <div class="list list-inset">
 	  <label class="item item-input">
 	    <i class="icon ion-search placeholder-icon"></i>
-	    <input type="text" placeholder="Search">
+	    <input type="text" placeholder="Search"  ng-model="search.name">
 	  </label>
+	  <div class="list">
+	  	<div class="row item"  ng-repeat="resource in accounts | filter:search">
+		  <div class="col col-40">{{ resource.name }}</div>
+		  <div class="col">{{ resource.city }}</div>
+		  <div class="col">{{ resource.state }}</div>
+		</div>
+	   </div>
+	 
 	</div>
   </ion-content>
 </ion-view>
